# s_pipe_kinematics

./: CMakeLists.txt  package.xml
include/s_pipe_kinematics/: s_pipe_robot.h
launch/: kinematics_services.launch.py  test_fk.launch.py  test_ik.launch.py
src/: fk_service_node.cpp  forward_kinematics.cpp  ik_service_node.cpp  inverse_kinematics.cpp
srv/: ForwardKinematics.srv  InverseKinematics.srv
test_example/: test_fk_client.cpp  test_ik_client.cpp  test_kinematics.cpp
